# Rover-Autonomous-Exploration

./: .gitignore  .gitmodules  README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/rover_control/: CMakeLists.txt  package.xml
catkin_ws/src/rover_control/include/rover_control/: RoverControl.hpp
catkin_ws/src/rover_control/src/: RoverControl.cpp  rover_control_node.cpp
catkin_ws/src/rover_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/rover_navigation/config/: base_local_planner.yaml  base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  dwa_local_planner_params.yaml  frontier_exploration.yaml  global_costmap.yaml  local_costmap.yaml
catkin_ws/src/rover_navigation/launch/: amcl.launch  move_base.launch  rover_exploration.launch  rover_navigation.launch
catkin_ws/src/rover_navigation/rviz/: rover_mapping.rviz  rover_navigation.rviz
catkin_ws/src/rover_odometry/: CMakeLists.txt  package.xml
catkin_ws/src/rover_odometry/config/: default.yaml
catkin_ws/src/rover_odometry/config/rover/: rover_parameters.yaml  topics.yaml
catkin_ws/src/rover_odometry/config/rover_odometry/: frames.yaml  rover_parameters.yaml
catkin_ws/src/rover_odometry/include/rover_odometry/: FIRFilter.hpp  Kinematics.hpp  RoverOdometry.hpp
catkin_ws/src/rover_odometry/launch/: rover_odometry.launch
catkin_ws/src/rover_odometry/src/: FIRFilter.cpp  Kinematics.cpp  RoverOdometry.cpp  rover_odometry_node.cpp
catkin_ws/src/rover_slam/: CMakeLists.txt  package.xml
catkin_ws/src/rover_slam/config/: gmapping.yaml
catkin_ws/src/rover_slam/launch/: amcl.launch  rover_gmap.launch
catkin_ws/src/rover_vision/: CMakeLists.txt  package.xml
catkin_ws/src/rover_vision/launch/: rover_vision.launch
mobile_robot_hardware_interface/lib/encoder/: Encoder.cpp  Encoder.h
mobile_robot_hardware_interface/lib/kinematics/: kinematics.cpp  kinematics.h
mobile_robot_hardware_interface/lib/motor/: Motor.cpp  Motor.h
mobile_robot_hardware_interface/lib/vel_controller/: vel_controller.cpp  vel_controller.h
mobile_robot_hardware_interface/lib/velocity_controller/: velocity_controller.cpp  velocity_controller.h
mobile_robot_hardware_interface/src/: main.cpp
