<?xml version="1.0"?>
<package format="2">
    <name>rover_navigation</name>
    <version>0.1.0</version>
    <description>Navigation package for rover.</description>
    <maintainer email="oswaldohernandez@protonmail.com">oswaldohernandez</maintainer>
    <license>MIT</license>
    <author email="">alejandrobutterfield</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
</package>